--- a/style.css
+++ b/style.css
@@ -1,51 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
 
-body {
-  margin: 0;
-  font-family: "Lato", sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-header {
-  display: flex;
-  height: 100px;
-  background-color: #c9ecdc;
-  border-bottom: 1px solid #ececec;
+.menu {
+    display: flex;
+    justify-content: center;
 }
+
+.menu-list {
+    display: flex;
+}
+
+.menu-list li {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    list-style: none;
+    padding-right: 10px;
+}
+
+.menu-list li a {
+    color: black;
+    text-decoration: none;
+}
+
+.menu-list li a.active {
+    color: lightgreen;
+}
+
+.menu-list li a:hover {
+    color: green;
+}
+
 .btn-cart {
-  width: 100px;
-  height: 38px;
-  margin-top: 20px;
-  margin-left: 1126px;
-  border: none;
-  background: white;
-  color: #a4a4a4;
-  border-radius: 5px;
+    width: 40px;
+    height: 20px;
+    border-radius: 15%;
+    border: none;
+    background-color: transparent;
 }
-.btn-cart:hover,.by-btn:hover {
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
+
+.btn-cart:hover {
+    color: green;
 }
+
 .products {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  background-color: #bae1ec;
-  border-bottom: 1px solid #ececec;
-} 
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
 .product-item {
-  width: 180px;
-  height: 150px;
-  border: 1px solid white;
+    margin-left: 50px;
 }
-h3,p {
-  text-align: center;
+
+.item-name {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    letter-spacing: 1.1px;
+    margin-top: 5px;
 }
-.by-btn {
-  display: flex;
-  margin: 0 auto;
-  border: none;
-  background: white;
-  color: #a4a4a4;
-  border-radius: 5px;
+
+.item-price {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    margin-top: 5px;
 }
+
+.buy-btn {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    margin-top: 5px;
+    border-radius: 5%;
+    border: 1px solid black;
+    letter-spacing: 0.5px;
+}
+
+.total-price {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+} 
